# zkwasm-minirollup-ts

./: .gitignore  package-lock.json  package.json
native/merkle-native/: Cargo.toml
native/merkle-native/src/: lib.rs
scripts/: build_merkle_native.mjs  sharded_tps_bench.mjs  tps_bench.mjs
src/: commit.ts  config.ts  mongo_write_buffer.ts  prover.ts  service.ts  signature.ts  test.ts
src/application/: application.d.ts  application_bg.wasm
src/bootstrap/: dbprocess.ts  rpcbind.d.ts  rpcbind.js  syncrpc.cjs
src/preexec/: preexec_worker.ts
test/: rpcbind.test.js  signature.test.js
