[package]
name = "merkle_native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
napi = { version = "2.16.17", default-features = false, features = ["napi8"] }
napi-derive = "2.16.13"
serde = { version = "1.0", features = ["derive"] }
zkwasm-host-circuits = { path = "../../../../zkWasm-host-circuits", default-features = false }

[workspace]
